--- a/app/views/admin/home/_navbar.html.haml
+++ b/app/views/admin/home/_navbar.html.haml
@@ -1,4 +1,4 @@
-- content_for :navbar_center do
+-#- content_for :navbar_center do
   %span.searchbar( class="relative w-full inline-block" )
     %input.searchbar__input{ type: "search", role: "search", placeholder: "Search site features ..." }
 
