--- a/app/views/admin/home/home.html.haml
+++ b/app/views/admin/home/home.html.haml
@@ -1,7 +1,4 @@
-- content_for :page_title, "Home"
-
-- content_for :breadcrumbs do
-  = link_to "Home", admin_root_url, aria: { current: "page" }
+- content_for :page_title, "Admin Dashboard"
 
 %h2( class="text-2xl font-bold leading-7 text-gray-900 sm:text-3xl sm:leading-9 sm:truncate" ) General Admin
 
