--- a/app/views/admin/users/_form.html.haml
+++ b/app/views/admin/users/_form.html.haml
@@ -1,43 +1,66 @@
-= form_for [:admin, user], html: { class: "ui fluid form" } do |f|
+= form_with model: [:admin, user], local: true, class: "form" do |form|
   - if user.errors.any?
-    .ui.message.error
+    .form__errors
       %h2= "#{ pluralize user.errors.count, "error" } prohibited this user from being saved:"
-      %ul
+      %ul.form__errors-list
         - user.errors.full_messages.each do |message|
-          %li= message
+          %li.form__errors-item= message
 
-  .ui.equal.width.grid
-    .ui.column
-      %h4.ui.dividing.header User Info
+  %fieldset.form__fieldset
+    %legend.form__legend Profile Info
 
-      .required.field
-        = f.label :username
-        = f.text_field :username, aria: { describedby: "Users Username" }
+    - form.errors_for :username do |has_error, error_messages|
+      .form__field{ class: ("form__field--error" if has_error) }
+        = form.label :username, class: "form__label"
+        = form.text_field :username, aria: { describedby: "Users Username" }, class: "form__input"
 
-      .required.field
-        = f.label :email
-        = f.email_field :email, aria: { describedby: "Users Email" }
+        - if has_error
+          %p.form__field-error= error_messages.join(", ")
 
-      - if user.new_record?
-        .required.field
-          = f.label :password
-          = f.password_field :password, aria: { describedby: "Users Password" }
+    - form.errors_for :username do |has_error, error_messages|
+      .form__field{ class: ("form__field--error" if has_error) }
+        = form.label :email, class: "form__label"
+        = form.email_field :email, aria: { describedby: "Users Email" }, class: "form__input"
 
-        .required.field
-          = f.label :password_confirmation
-          = f.password_field :password_confirmation, aria: { describedby: "Users Password Confirmation" }
+        - if has_error
+          %p.form__field-error= error_messages.join(", ")
 
-    .ui.column
-      %h4.ui.dividing.header Roles
+    - if user.new_record?
+      - form.errors_for :username do |has_error, error_messages|
+        .form__field{ class: ("form__field--error" if has_error) }
+          = form.label :password, class: "form__label"
+          = form.password_field :password, aria: { describedby: "Users Password" }, class: "form__input"
 
-      - if current_user == user
-        %p For safety reasons, you aren't allowed to edit your own roles. Please have another Admin do so for you.
+          - if has_error
+            %p.form__field-error= error_messages.join(", ")
 
-      - else
-        = f.collection_check_boxes :role_ids, Role.all, :id, :name do |d|
-          .field
-            .ui.checkbox
-              = d.check_box
-              = d.label
+      - form.errors_for :username do |has_error, error_messages|
+        .form__field{ class: ("form__field--error" if has_error) }
+          = form.label :password_confirmation, class: "form__label"
+          = form.password_field :password_confirmation, aria: { describedby: "Users Password Confirmation" }, class: "form__input"
 
-  = f.submit "Save", class: "ui positive right floated submit button"
+          - if has_error
+            %p.form__field-error= error_messages.join(", ")
+
+    - else
+      .form__field
+        = form.label :password, class: "form__label"
+        %p To edit the users password, please use the separate "Change password" flow to help prevent accidental changes.
+
+  %fieldset.form__fieldset
+    %legend.form__legend Permissions
+
+    - form.errors_for :role_ids do |has_error, error_messages|
+      .form__field{ class: ("form__field--error" if has_error) }
+        - if current_user == user
+          %p For safety reasons, you aren't allowed to edit your own roles. Please have another Admin do so for you.
+
+        - else
+          = form.collection_check_boxes :role_ids, Role.all, :id, :name do |role_check_box|
+            = role_check_box.label do
+              = role_check_box.check_box
+              = role_check_box.text.humanize
+            %br
+  
+  .form__actions
+    = form.submit "Save", class: "button button--green"
