--- a/app/views/admin/users/edit.html.haml
+++ b/app/views/admin/users/edit.html.haml
@@ -1,13 +1,12 @@
 - content_for :page_title do
   Editing "#{ @user.username }"
 
-- content_for :menu do
-  .item
-    .divider
-    .header User
-    .menu
-      = link_to admin_user_path(@user), class: "item" do
-        %i.expand.icon
-        view
+- content_for :breadcrumbs do
+  = link_to "Home", admin_root_url
+  = link_to "Users", admin_users_url
+  = link_to @user.username, admin_user_url(@user)
+  = link_to "Edit", edit_admin_user_url(@user), aria: { current: "page" }
 
-= render partial: "form", locals: { user: @user }
+.resource-list
+  .resource-list__row
+    = render "form", user: @user
