--- a/app/views/admin/users/index.html.haml
+++ b/app/views/admin/users/index.html.haml
@@ -8,65 +8,61 @@
   = link_to "New", new_admin_user_url, class: "button button--gray"
 
 - content_for :page_meta do
-  %div( class="flex items-center text-sm leading-5 text-gray-500" )
+  .page-header__metadata
     = render "components/feather_icon", icon: "users"
-    %span.ml-2
-      = "#{ @count} User".pluralize @count
-      total
+    = "#{ @count} User".pluralize @count
+    total
 
+%ul.resource-list
+  %li.resource-list__row
+    .resource-list__column
+      = render "components/checkbox" do
+        Select All
 
-%ul( class="min-w-full leading-normal border-gray-300 md:rounded-md border shadow-sm bg-white mb-4" )
-  %li( class="px-5 py-5 border-b border-gray-300 text-sm" )
-    %div( class="flex items-center justify-between" )
-      .mr-2
-        = render "components/checkbox" do
-          Select All
+    .resource-list__column.w-full
 
-      .w-full.mr-2.flex.flex-row
+    .resource-list__column.w-full
+      = paginate @users
 
-      %div
-        = paginate @users
-
-%ul( class="min-w-full leading-normal border-gray-300 md:rounded-md border shadow-sm bg-white" )
+%ul.resource-list
   - if @users.any?
     - @users.each do |user|
-      %li( class="px-5 py-5 border-b border-gray-300 text-sm" )
-        %div( class="flex items-center justify-between" )
-          %div.mr-2
-            = render "components/checkbox"
+      %li.resource-list__row
+        .resource-list__column
+          = render "components/checkbox"
 
-          %div.w-full.mr-2
-            %div( class="text-sm leading-5 font-medium text-gray-900" )
-              = user.username
-            %div( class="text-sm leading-5 text-gray-500" )
-              = user.email
+        .resource-list__column.w-full
+          %div( class="text-sm leading-5 font-medium text-gray-900" )
+            = user.username
+          %div( class="text-sm leading-5 text-gray-500" )
+            = user.email
 
-          %div.w-full.mr-2.hidden( class="md:block" )
-            .flex
-              %strong.mr-1 Roles:
-              - user.roles.map(&:name).map(&:humanize).each do |role|
-                %span.px-2.inline-flex.text-xs.leading-5.font-semibold.rounded-full.bg-gray-200.text-gray-800.mx-1= role
+        .resource-list__column.w-full.hidden( class="md:block" )
+          .flex
+            %strong.mr-1 Roles:
+            - user.roles.map(&:name).map(&:humanize).each do |role|
+              %span.px-2.inline-flex.text-xs.leading-5.font-semibold.rounded-full.bg-gray-200.text-gray-800.mx-1= role
 
-            .flex
-              %strong.mr-1 Created:
-              = render "components/time", time: user.created_at
+          .flex
+            %strong.mr-1 Created:
+            = render "components/time", time: user.created_at
 
-          %div
-            .button-group
-              = link_to admin_user_path(user), class: "button button--gray" do
-                = render "components/feather_icon", icon: "maximize"
-                View
+        .resource-list__column
+          .button-group
+            = link_to admin_user_path(user), class: "button button--gray" do
+              = render "components/feather_icon", icon: "maximize"
+              View
 
-              .button.button--gray.button--icon.dropdown.dropdown--hoverable
-                = behavior_data "dropdown" do |dataset|
-                  %button.dropdown__trigger{  **dataset }
-                    = render "components/feather_icon", icon: "chevron-down"
+            .button.button--gray.button--icon.dropdown.dropdown--hoverable
+              = behavior_data "dropdown" do |dataset|
+                %button.dropdown__trigger{  **dataset }
+                  = render "components/feather_icon", icon: "chevron-down"
 
-                .dropdown__container.hidden
-                  .dropdown__menu
-                    .dropdown__row
-                      %h6.dropdown__header DangerZone
-                      = link_to "Edit", edit_admin_user_path(user), class: "dropdown__link"
+              .dropdown__container.hidden
+                .dropdown__menu
+                  .dropdown__row
+                    %h6.dropdown__header DangerZone
+                    = link_to "Edit", edit_admin_user_path(user), class: "dropdown__link"
 
   - else
     %li( class="px-5 py-5 border-b border-gray-300 text-sm" )
