--- a/app/views/admin/users/new.html.haml
+++ b/app/views/admin/users/new.html.haml
@@ -1,4 +1,11 @@
 - content_for :page_title do
   New User
 
-= render partial: "form", locals: { user: @user }
+- content_for :breadcrumbs do
+  = link_to "Home", admin_root_url
+  = link_to "Users", admin_users_url
+  = link_to "New", new_admin_user_url, aria: { current: "page" }
+
+.resource-list
+  .resource-list__row
+    = render "form", user: @user
