--- a/app/javascript/styles/admin.css
+++ b/app/javascript/styles/admin.css
@@ -466,7 +466,7 @@
 }
 
 .flashes__flash {
-  @apply flex-col inline-flex justify-center px-4 py-5 w-full shadow-md bg-white;
+  @apply flex-row inline-flex justify-between items-center px-4 py-5 w-full shadow-md bg-white;
 }
 
 @screen md {
@@ -475,7 +475,12 @@
   }
 }
 
-.flashes__flash--fade-out {
+.flashes__close {}
+.flashes__close-button {
+}
+
+.flashes__message {
+  @apply w-full;
 }
 
 .flashes__flash--notice {
@@ -534,12 +539,14 @@
 }
 
 .form__field {
-  @apply px-3 mb-6;
+  @apply w-full px-3 mb-6;
 }
 
 @screen md {
   .form__field {
-    @apply  mb-3;
+    @apply mb-3;
+
+    max-width: 30rem;
   }
 }
 
@@ -575,6 +582,10 @@
 
 .form__actions {
   @apply ;
+}
+
+.feather {
+  @apply inline-block;
 }
 
 @tailwind utilities;
