Small general cleanup (#147)
* remove authorization and search tables, omni-auth session items

adjust logster and several other items for better dev experience

* db migrate for removed tables

* forgot no uniq usernames, re-add tag index even though it's empty

--- a/app/views/admin/home/home.html.haml
+++ b/app/views/admin/home/home.html.haml
@@ -22,4 +22,5 @@
 
 %ul
   %li= link_to "Sidekiq", sidekiq_web_path, data: { turbolinks: false }
-  %li= link_to "Logster", logster_web_path, data: { turbolinks: false }
+  - if Rails.env.production?
+    %li= link_to "Logster", logster_web_path, data: { turbolinks: false }
