--- a/app/views/admin/users/show.html.haml
+++ b/app/views/admin/users/show.html.haml
@@ -56,5 +56,5 @@
   .resource-list__row
     .resource__list__col
       %strong.mr-1 Roles:
-      - @user.roles.map(&:name).map(&:humanize).each do |role|
+      - @user.roles.map(&:name).each do |role|
         %span.px-2.inline-flex.text-xs.leading-5.font-semibold.rounded-full.bg-gray-200.text-gray-800.mx-1= role
